--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -6,24 +6,20 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set Node.js 20.x
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: "20.x"
+          cache: "yarn"
 
-      - name: Run install
-        uses: borales/actions-yarn@v5
-        with:
-          cmd: install # will run `yarn install` command
+      - name: Install dependencies
+        run: yarn install
 
-      - name: Build production bundle
-        uses: borales/actions-yarn@v5
-        with:
-          cmd: build:prod # will run `yarn build:prod` command
+      - name: Build project
+        run: yarn build
 
-      - name: Test the app
-        uses: borales/actions-yarn@v5
-        with:
-          cmd: test # will run `yarn test` command
+      - name: Run tests
+        run: yarn test
