--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -9,6 +9,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Enable Corepack before setting up Node
+        run: corepack enable
+
       - name: Set Node.js 20.x
         uses: actions/setup-node@v4
         with:
